# ros_odrive

./: README.md
.github/workflows/: ros-build-test.yaml
odrive_base/include/: can_simple_messages.hpp  can_simple_messages_5.hpp  can_simple_messages_6.hpp  odrive_enums.h
odrive_base/src/: socket_can.cpp
odrive_botwheel_explorer/: README.md
odrive_botwheel_explorer/description/urdf/: diffbot.ros2_control.xacro
odrive_node/: CMakeLists.txt  package.xml
odrive_node/include/: byte_swap.hpp  odrive_can_node.hpp
odrive_node/msg/: ControllerStatus.msg  ODriveStatus.msg
odrive_node/src/: main.cpp  odrive_can_node.cpp
odrive_ros_control/: CMakeLists.txt  README.md  odrive_hardware_interface.xml  package.xml
odrive_ros_control/include/: odrive_hardware_interface.hpp
odrive_ros_control/src/: main.cpp  odrive_hardware_interface.cpp
