<?xml version="1.0"?>
<package format="2">
  <name>odrive_can</name>
  <version>0.0.1</version>
  <description>example package to complement odrive_can</description>
  <maintainer email="astrizhkin@biarum.com">root</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
  </export>
</package>
