<?xml version="1.0"?>
<package format="2">
  <name>odrive_ros_control</name>
  <version>0.0.1</version>
  <description>ODrive Hardware Interface for ros_control</description>
  <maintainer email="astrizhkin@biarum.com">root</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <export>
    <hardware_interface plugin="${prefix}/odrive_hardware_interface.xml"/>
  </export>
</package>
